--- a/hu_wuhu_rn.adoc
+++ b/hu_wuhu_rn.adoc
@@ -15,46 +15,20 @@ summary: Release Notes for Windows Unified Host Utilities
 :imagesdir: ./media/
 
 [.lead]
-The release notes document contains the latest information for the Windows Unified Host Utilities 7.2 and 7.1 releases, including updates about new features, enhancements, and known issues. The document is updated when new information on using the Windows Host Utilities becomes available.
+The release notes describe new features and enhancements, issues fixed in the current release, known problems and limitations, and important cautions related to configuring and managing your specific Windows host with your ONTAP storage system.
 
-== About the Windows Unified Host Utilities 
+For specific information about the operating system versions and updates that the Host Utilities support, see the link:https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^].
 
-The Windows Unified Host Utilities enable you to connect a Windows host computer to NetApp storage systems. The Windows Unified Host Utilities include an installation program that sets the required Windows registry and HBA values.
-
-The Windows Unified Host Utilities continues to support the following versions of Windows:
-
-* Windows 2012
-* Windows 2012R2
-* Windows 2016
-* Windows 2019
-* Windows 2022
-
-[NOTE]
-NetApp qualifies additional components between releases of the Host Utilities software. For the latest information about the system requirements, see the link:https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^].
-
-
-== Features 
+== What's new
 
 * Windows Unified Host Utilities 7.2 includes support for NVMe/FC driver parameter settings and bug fixes for new vendor cards.
 
 * Windows Unified Host Utilities 7.1 includes support for E-Series storage systems, support for ONTAP 9 and later versions, and enhanced iSCSI timeouts for faster failover.
 
-== Important cautions
 
-Before deploying the latest release of Windows Host Utilities, you must read the information available to help you identify and resolve issues that might affect the operation of your systems.
+== Known problems and limitations
 
-For more information about an individual bug and to explore other bug-related tools, see link:https://mysupport.netapp.com/site/bugs-online/product[NetApp Bugs Online^].
-
-
-=== Installing the required hotfixes
-
-To ensure a successful installation or upgrade of Windows Unified Host Utilities, you need to install a specific Windows hotfix. Some hotfixes are a component of Windows updates. 
-
-Refer to the link:hu_wuhu_72.html[Windows Host Utilities documentation] for your specific configuration hotfix requirements.
-
-== Known issues
-
-Some unexpected and potentially undesired behaviors, as well as, in some cases, workarounds to avoid these behaviors, have been identified in the 7.1 release. 
+You should be aware of the following known problems and limitations that might impact performance on your specific host. A few unexpected and potentially undesired behaviors, as well as, in some cases, workarounds to avoid these behaviors, have been identified in the 7.1 release. 
 
 [cols=3,options="header", cols= "30, 30, 20"]
 |===
@@ -69,28 +43,3 @@ Some unexpected and potentially undesired behaviors, as well as, in some cases, 
 link:https://mysupport.netapp.com/site/bugs-online/product[NetApp Bugs Online^] provides complete information for most known issues, including suggested workarounds where possible.
 
 
-== About SAN host configuration documentation
-
-Documentation for SAN host utilities is included in the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[ONTAP SAN host configuration documentation]. ONTAP SAN host configuration documentation is cumulative, covering all current SAN host releases. Any functional differences across releases are noted in context.
-
-== Where to find product documentation and other information
-
-You can access documentation for all NetApp products and find other product information resources, such as technical reports and white papers on the Product Documentation page of the NetApp corporate site.
-
-.Related information
-
-*Configuring and managing your ONTAP storage system*
-
-* The link:https://docs.netapp.com/us-en/ontap/setup-upgrade/index.html[ONTAP Software Setup Guide^] for your version of ONTAP
-* The link:https://docs.netapp.com/us-en/ontap/san-management/index.html[ONTAP SAN Administration Guide^] for your version of ONTAP
-* The link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2492508[ONTAP Release Notes^] for your version of ONTAP
-
-*Configuring and managing your E-Series storage system*
-
-* The SANtricity Storage Manager Configuration and Provisioning for Windows Express Guide that is appropriate for your protocol
-* The SANtricity Storage Manager Configuration and Provisioning Express Guide for your operating system, protocol, and version of SANtricity.
-* The SANtricity Storage Manager Software Installation Reference specific for your version of SANtricity.
-* The SANtricity Storage Manager Multipath driver's guide specific for your version of SANtricity.
-* The SANtricity Storage Manager Release Notes for your version of SANtricity.
-
-See the link:https://docs.netapp.com/us-en/e-series-family/[E-Series documentation^] to find SANtricity related documentation.
