--- a/hu_wuhu_71.adoc
+++ b/hu_wuhu_71.adoc
@@ -5,7 +5,7 @@ keywords: windows, host, utilities, 7.1, hba, fibre, channel, SANtricity, netapp
 summary: Windows Unified Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
 ---
 
-= Windows Unified Host Utilities 7.1
+= Install Windows Unified Host Utilities 7.1
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -15,7 +15,13 @@ summary: Windows Unified Host Utilities includes an installation program that se
 :imagesdir: ./media/
 
 [.lead]
-== What Windows Host Utilities is
+The Windows Unified Host Utilities enable you to connect a Windows host computer to NetApp storage systems.
+
+The Windows Unified Host Utilities continues to support the following versions of Windows:
+
+* Windows 2012
+* Windows 2012R2
+* Windows 2016
 
 Windows Unified Host Utilities includes an installation program that sets the required Windows registry and Host Bus Adapter (HBA) parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
 
@@ -38,7 +44,6 @@ The following programs and files are installed on the Windows host computer. The
 |Displays the version of the Host Utilities and Fibre Channel HBAs.
 |===
 
-== Configurations supported by Host Utilities
 
 The Host Utilities support different Windows host configurations, protocols, and Multipathing options. For more information, see https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
 
@@ -119,344 +124,5 @@ To install the Host Utilities software package interactively, you must run the H
 To see the standard Microsoft Installer (MSI) options for logging and other functions, enter `msiexec /help` at a Windows command prompt. For example:
 `msiexec /i install.msi /quiet /l*v <install.log> LOGVERBOSE=1`
 
-== Upgrade the Host Utilities
 
-The new Host Utilities installation package must be in a path that is accessible by the Windows host. Follow the instructions for installing the Host Utilities interactively to obtain the installation package.
 
-=== Upgrade the Host Utilities interactively
-To install the Host Utilities software package interactively, you must run the Host Utilities installation program and follow the prompts.
-
-.Steps
-
-. Change to the directory from which you downloaded the executable file.
-. Run the executable file and follow the instructions on the screen.
-. Reboot the Windows host when prompted.
-. Check version of the host Utility after reboot:
-.. Open *Control Panel*.
-.. Go to *Program and features* and check the host utility version.
-
-=== Upgrade the Host Utilities from command line
-You can perform a quiet (unattended) installation of the new host utilities by entering the appropriate commands at a Windows command prompt.
-The New Host Utilities installation package must be in a path that is accessible by the Windows host. Follow the instructions for installing the Host Utilities interactively to obtain the installation package.
-
-.Steps
-
-. Enter the following command at a Windows command prompt:
-+
-`msiexec /i installer.msi /quiet MULTIPATHING= {0 | 1} [INSTALLDIR=inst_path]`
-
-* where `installer` is the name of the `.msi` file for your CPU architecture.
-* MULTIPATHING specifies whether MPIO support is installed. Allowed values are 0 for no, 1 for yes
-* `inst_path` is the path where the Host Utilities files are installed. The default path is `C:\Program Files\NetApp\Windows Host Utilities\`.
-
-[NOTE]
-To see the standard Microsoft Installer (MSI) options for logging and other functions, enter `msiexec /help` at a Windows command prompt. For example:
-`msiexec /i install.msi /quiet /l*v <install.log> LOGVERBOSE=1`
-
-The system automatically reboots when the installation is complete.
-
-== Repair and removing Windows Host Utilities
-You can use the Repair option of the Host Utilities installation program to update HBA and Windows registry settings. You can remove the Host Utilities entirely, either interactively or from the Windows command line.
-
-=== Repair or remove Windows Host Utilities interactively
-The Repair option updates the Windows registry and Fibre Channel HBAs with the required settings. You can also remove the Host Utilities entirely.
-
-.Steps
-
-. Open Windows *Programs and Features* (Windows Server 2012 R2, Windows Server 2016, Windows Server 2019).
-. Select *NetApp Windows Unified Host Utilities*.
-. Click *Change*.
-. Click *Repair* or *Remove*, as needed.
-. Follow the instructions on the screen.
-
-=== Repair or remove Windows Host Utilities from command line
-The Repair option updates the Windows registry and Fibre Channel HBAs with the required settings. You can also remove the Host Utilities entirely from a Windows command line.
-
-.Steps
-
-. Enter the following command on the Windows command line to repair Windows Host Utilities:
-+
-`msiexec {/uninstall | /f]installer.msi [/quiet]`
-
-* `/uninstall` removes the Host Utilities entirely.
-* `/f` repairs the installation.
-* `installer.msi` is the name of the Windows Host Utilities installation program on your system.
-* `/quiet` suppresses all feedback and reboots the system automatically without prompting when the command completes.
-
-== Overview of settings used by the Host Utilities
-The Host Utilities require certain registry and parameter settings to ensure the Windows host correctly handles the storage system behavior.
-
-Windows Host Utilities sets the parameters that affect how the Windows host responds to a delay or loss of data. The particular values have been selected to ensure that the Windows host correctly handles events such as the failover of one controller in the storage system to its partner controller.
-
-Not all the values apply for the DSM for SANtricity Storage Manager; however, any overlap of values set by the Host Utilities and those set by the DSM for SANtricity Storage Manager do not result in conflicts.
-Fibre Channel and iSCSI host bus adapters (HBAs) also have parameters that must be set to ensure the best performance and to successfully handle storage system events.
-
-The installation program supplied with Windows Unified Host Utilities sets the Windows and Fibre Channel HBA parameters to the supported values.
-
-[NOTE]
-You must manually set iSCSI HBA parameters.
-
-The installer sets different values depending on whether you specify multipath I/O (MPIO) support when running the installation program,
-
-You should not change these values unless technical support directs you to do so.
-
-== Registry values set by Windows Unified Host Utilities
-
-The Windows Unified Host Utilities installer automatically sets registry values that are based on the choices that you make during installation. You should be aware of these registry values, the operating system version.
-The following values are set by the Windows Unified Host Utilities installer. All values are decimal unless otherwise noted. HKLM is the abbreviation for HKEY_LOCAL_MACHINE.
-
-[options="header", cols= "~, 10, ~"]
-|===
-|Registry key |Value |When set
-|HKLM\SYSTEM\CurrentControlSet\Services
-\msdsm\Parameters
-\DsmMaximumRetryTimeDuringStateTransition
-|120 |When MPIO support is specified and your server is Windows Server 2008, Windows Server 2008 R2, Windows Server 2012, Windows Server 2012 R2, or Windows Server 2016, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services
-\msdsm\Parameters
-\DsmMaximumStateTransitionTime
-|120 |When MPIO support is specified and your server is Windows Server 2008, Windows Server 2008 R2, Windows Server 2012, Windows Server 2012 R2, or Windows Server 2016, except if Data ONTAP DSM is detected
-1.2+|HKLM\SYSTEM\CurrentControlSet\Services\msdsm
-\Parameters\DsmSupportedDeviceList
-|"NETAPPLUN" |When MPIO support is specified
-|"NETAPP LUN", "NETAPP LUN C-Mode" |When MPIO support is specified, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Control\Class
-\{iSCSI_driver_GUID}\ instance_ID\Parameters
-\IPSecConfigTimeout
-|60
-|Always, except when Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Control
-\Class\{iSCSI_driver_GUID}
-\ instance_ID\Parameters\LinkDownTime
-|10
-|Always
-|HKLM\SYSTEM\CurrentControlSet\Services\ClusDisk
-\Parameters\ManageDisksOnSystemBuses
-|1|Always, except when Data ONTAP DSM is detected
-1.2+|HKLM\SYSTEM\CurrentControlSet\Control
-\Class\{iSCSI_driver_GUID}
-\ instance_ID\Parameters\MaxRequestHoldTime
-|120
-|When no MPIO support is selected
-|30
-|Always, except when Data ONTAP DSM is detected
-1.2+|HKLM\SYSTEM\CurrentControlSet
-\Control\MPDEV\MPIOSupportedDeviceList
-|"NETAPP LUN"
-|When MPIO support is specified
-|"NETAPP LUN", "NETAPP LUN C-Mode"
-|When MPIO is support-specified, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services\mpio
-\Parameters\PathRecoveryInterval
-|40
-|When your server is Windows Server 2008, Windows Server 2008 R2, Windows Server 2012, Windows Server 2012 R2, or Windows Server 2016 only
-|HKLM\SYSTEM\CurrentControlSet\Services\mpio
-\Parameters\PathVerifyEnabled
-|0
-|When MPIO support is specified, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services\msdsm
-\Parameters\PathVerifyEnabled
-|0
-|When MPIO support is specified, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services
-\msdsm\Parameters\PathVerifyEnabled
-|0
-|When MPIO support is specified and your server is Windows Server 2008, Windows Server 2008 R2, Windows Server 2012, Windows Server 2012 R2, or Windows Server 2016, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services
-\msiscdsm\Parameters\PathVerifyEnabled
-|0
-|When MPIO support is specified and your server is Windows Server 2003, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services\vnetapp
-\Parameters\PathVerifyEnabled
-|0
-|When MPIO support is specified, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services\mpio
-\Parameters\PDORemovePeriod
-|130
-|When MPIO support is specified, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services\msdsm
-\Parameters\PDORemovePeriod
-|130
-|When MPIO support is specified and your server is Windows Server 2008, Windows Server 2008 R2, Windows Server 2012, Windows Server 2012 R2, or Windows Server 2016, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services\msiscdsm
-\Parameters\PDORemovePeriod
-|130
-|When MPIO support is specified and your server is Windows Server 2003, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services
-\vnetapp \Parameters\PDORemovePeriod
-|130
-|When MPIO support is specified, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services
-\mpio\Parameters\RetryCount
-|6
-|When MPIO support is specified, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services\msdsm
-\Parameters\RetryCount
-|6
-|When MPIO support is specified and your server is Windows Server 2008, Windows Server 2008 R2, Windows Server 2012, Windows Server 2012 R2, or Windows Server 2016, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services
-\msiscdsm\Parameters\RetryCount
-|6
-|When MPIO support is specified and your server is Windows Server 2003, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services
-\vnetapp\Parameters\RetryCount
-|6
-|When MPIO support is specified, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services
-\mpio\Parameters\RetryInterval
-|1
-|When MPIO support is specified, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services
-\msdsm\Parameters\RetryInterval
-|1
-|When MPIO support is specified and your server is Windows Server 2008, Windows Server 2008 R2, Windows Server 2012, Windows Server 2012 R2, or Windows Server 2016, except if Data ONTAP DSM is  detected
-|HKLM\SYSTEM\CurrentControlSet\Services
-\vnetapp\Parameters\RetryInterval |1 |When MPIO support is specified, except if Data ONTAP DSM is detected
-1.2+|HKLM\SYSTEM\CurrentControlSet
-\Services\disk\TimeOutValue |120 |When no MPIO support is selected, except if Data ONTAP DSM is detected |60 |When MPIO support is specified, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services\mpio
-\Parameters\UseCustomPathRecoveryInterval
-|1
-|When your server is Windows Server 2008,Windows Server 2008 R2, Windows Server 2012, Windows Server 2012 R2, or Windows Server 2016 only
-|===
-
-.Related information
-Refer to the https://docs.microsoft.com/en-us/troubleshoot/windows-server/performance/windows-registry-advanced-users[Microsoft documents^] for the registry parameter details.
-
-== FC HBA values set by Windows Host Utilities
-
-On systems using Fibre Channel, the Host Utilities installer sets the required timeout values for Emulex and QLogic FC HBAs.
-For Emulex Fibre Channel HBAs, the installer sets the following parameters when MPIO is selected:
-
-|===
-|Property type |Property value
-
-|LinkTimeOut
-|1
-|NodeTimeOut
-|10
-|===
-
-For Emulex Fibre Channel HBAs, the installer sets the following parameters when MPIO is not selected:
-
-|===
-|Property type |Property value
-
-|LinkTimeOut
-|30
-|NodeTimeOut
-|120
-|===
-
-For QLogic Fibre Channel HBAs, the installer sets the following parameters when MPIO is selected:
-
-|===
-|Property type |Property value
-
-|LinkDownTimeOut
-|1
-|PortDownRetryCount
-|10
-|===
-
-For QLogic Fibre Channel HBAs, the installer sets the following parameters when MPIO is not selected:
-
-|===
-|Property type |Property value
-
-|LinkDownTimeOut
-|30
-|PortDownRetryCount
-|120
-|===
-
-[NOTE]
-The names of the parameters might vary slightly depending on the program.
-For example, in the QLogic QConvergeConsole program, the parameter is displayed as `Link Down Timeout`.
-The Host Utilities `fcconfig.ini` file displays this parameter as either `LinkDownTimeOut` or `MpioLinkDownTimeOut`, depending on whether MPIO is specified. However, all of these names refer to the same HBA parameter.
-
-.Related information
-Refer to https://www.broadcom.com/support/download-search[Emulex^] or https://driverdownloads.qlogic.com/QLogicDriverDownloads_UI/Netapp_search.aspx[QLogic^] site to know more about the timeout parameters.
-
-== Troubleshooting
-This section describes general troubleshooting techniques for Windows Host Utilities. Be sure to check the latest Release Notes for known problems and solutions.
-
-.Different areas to identify the possible interoperability problems
-
-* To identify potential interoperability problems, you must confirm that the Host Utilities support your combination of host operating system software, host hardware, ONTAP software, and storage system hardware.
-* You must check the Interoperability Matrix.
-* You must verify that you have the correct iSCSI configuration.
-* If iSCSI LUNs are not available after a reboot, you must verify that the target is listed as persistent on the Persistent Targets tab of the Microsoft iSCSI initiator GUI.
-* If applications using the LUNs display errors on startup, you must verify that the applications are configured to depend on the iSCSI service.
-* For Fibre Channel paths to storage controllers running ONTAP, you must verify that the FC switches are zoned using the WWPNs of the target LIFs, not the WWPNs of the physical ports on the node.
-* You must review the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71_rn.html[Release Notes for Windows Host Utilities] to check for known problems. The Release Notes include a list of known problems and limitations.
-* You must review the troubleshooting information in the https://docs.netapp.com/ontap-9/index.jsp[SAN Administration Guide^] for your version of ONTAP.
-* You must search https://mysupport.netapp.com/site/bugs-online/[Bugs Online^] for recently discovered problems.
-* In the Bug Types field under Advanced Search, you should select ISCSI - Windows and then click Go. You should repeat the search for Bug Type FCP -Windows.
-* You must collect information about your system.
-* Record any error messages that are displayed on the host or storage system console.
-* Collect the host and storage system log files.
-* Record the symptoms of the problem and any changes made to the host or storage system just before the problem appeared.
-* If you are unable to resolve the problem, then you can contact NetApp technical support.
-
-.Related information
-
-http://mysupport.netapp.com/matrix[NetApp Interoperability Matrix Tool^]
-https://mysupport.netapp.com/portal/documentation[NetApp Documentation^]
-https://mysupport.netapp.com/NOW/cgi-bin/bol[NetApp Bugs Online^]
-
-=== Understand the Host Utilities changes to FC HBA driver settings
-
-During the installation of the required Emulex or QLogic HBA drivers on an FC system, several parameters are checked and, in some cases, modified.
-
-The Host Utilities set values for the following parameters if MS DSM for Windows MPIO is detected:
-
-* LinkTimeOut – defines the length of time in seconds that the host port waits before resuming I/O after a physical link is down.
-* NodeTimeOut – defines the length of time in seconds before the host port recognizes that a connection to the target device is down.
-
-When troubleshooting HBA issues, check to make sure these settings have the correct values. The correct values depend on two factors:
-
-* The HBA vendor
-* Whether you are using multipathing software (MPIO)
-
-You can correct the HBA settings by running the Repair option of the Windows Host Utilities installer.
-
-==== Verify the Emulex HBA driver settings on FC systems
-If you have a Fibre Channel system, you must verify the Emulex HBA driver settings. These settings must exist for each port on the HBA.
-
-.Steps
-
-. Open OnCommand Manager.
-. Select the appropriate HBA from the list and click the *Driver Parameters* tab.
-+
-The driver parameters appear.
-. If you are using MPIO software, ensure that you have the following driver settings:
-+
-* LinkTimeOut - 1
-* NodeTimeOut - 10
-. If you are not using MPIO software, ensure that you have the following driver settings:
-+
-* LinkTimeOut - 30
-* NodeTimeOut - 120
-
-==== Verify the QLogic HBA driver settings on FC systems
-On FC systems, you need to verify the QLogic HBA driver settings. These settings must exist for each port on the HBA.
-
-.Steps
-
-. Open QConvergeConsole, and then click *Connect* on the  toolbar.
-+
-The Connect to Host dialog box appears.
-. Select the appropriate host from the list, and then click *Connect*.
-+
-A list of HBAs appears in the FC HBA pane.
-. Select the appropriate HBA port from the list, and then click the *Settings* tab.
-. Select *Advanced HBA Port Settings* from the *Select Settings* section.
-. If you are using MPIO software, ensure you have the following driver settings:
-+
-* Link Down Timeout (linkdwnto) - 1
-* Port Down Retry Count (portdwnrc) - 10
-. If you are not using MPIO software, ensure you have the following driver settings:
-+
-* Link Down Timeout (linkdwnto) - 30
-* Port Down Retry Count (portdwnrc) - 120
