--- a/hu_wuhu_72.adoc
+++ b/hu_wuhu_72.adoc
@@ -5,7 +5,7 @@ keywords: wuhu, 7.2, host utilities, SAN, windows, unified
 summary: Windows Unified host utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
 ---
 
-= Windows Unified Host Utilities 7.2
+= Install Windows Unified Host Utilities 7.2
 :hardbreaks:
 :nofooter:
 :icons: font
@@ -15,6 +15,14 @@ summary: Windows Unified host utilities includes an installation program that se
 
 [.lead]
 The Windows Unified Host Utilities enable you to connect a Windows host computer to NetApp storage systems.
+
+The Windows Unified Host Utilities continues to support the following versions of Windows:
+
+* Windows 2012
+* Windows 2012R2
+* Windows 2016
+* Windows 2019
+* Windows 2022
 
 Windows Unified host utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
 
@@ -38,14 +46,6 @@ The following programs and files are installed on the Windows host computer. The
 |===
 
 The host utilities support different Windows host configurations, protocols, and multipathing options. For more information, see the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
-
-The Windows Unified Host Utilities continues to support the following versions of Windows:
-
-* Windows 2012
-* Windows 2012R2
-* Windows 2016
-* Windows 2019
-* Windows 2022
 
 
 == Verify your host and storage system configuration
@@ -140,229 +140,4 @@ To see the standard Microsoft Installer (MSI) options for logging and other func
 ====
 
 
-
-== Overview of settings used by the host utilities
-
-The host utilities require certain registry and parameter settings to verify that the Windows host correctly handles the storage system behavior.
-
-Windows Host Utilities set the parameters that affect how the Windows host responds to a delay or loss of data. The particular values have been selected to verify that the Windows host correctly handles events such as the failover of one controller in the storage system to its partner controller.
-
-Not all values apply to the DSM for SANtricity Storage Manager; however, any overlap of values set by the host utilities and those set by the DSM for SANtricity Storage Manager do not result in conflicts.
-
-FC, NVMe/FC, and iSCSI HBAs also have parameters that you must set to ensure best performance and to successfully handle storage system events.
-
-The installation program supplied with Windows Unified Host Utilities sets the Windows, FC, and NVMe/FC HBA parameters to the supported values.
-
-You must manually set the iSCSI HBA parameters.
-
-The installer sets different values depending on whether you specify multipath I/O (MPIO) support when running the installation program.
-
-You should not change these values unless technical support directs you to do so.
-
-== Registry values set by Windows Unified Host Utilities
-
-The Windows Unified Host Utilities installer automatically sets registry values that are based on the choices that you make during the installation. You should be aware of these registry values and the operating system version.
-
-The following values are set by the Windows Unified Host Utilities installer. All values are decimal unless otherwise stated. 
-
-[NOTE]
-HKLM is the abbreviation for `HKEY_LOCAL_MACHINE`.
-
-[cols=3*,options="header", cols="20,20,30"]
-|===
-|Registry key |Value |When set
-
-|HKLM\SYSTEM\CurrentControlSet\Services
-\msdsm\Parameters
-\DsmMaximumRetryTimeDuringStateTransition
-|120
-|When MPIO support is specified and your server is Windows Server 2012 R2,
-Windows Server 2016 and Windows 2019, or Windows Server 2022
-|HKLM\SYSTEM\CurrentControlSet
-\Services\msdsm\Parameters
-\DsmMaximumStateTransitionTime
-|120
-|When MPIO support is specified and your server is Windows Server 2012 R2,
-or Windows Server 2016, Windows 2019 or Windows Server 2022
-|HKLM\SYSTEM\CurrentControlSet\Services
-\msdsm\Parameters\DsmSupportedDeviceList
-|"NETAPP LUN", "NETAPP LUN C-
-Mode"
-"NVMe NetApp ONTAO Con"
-|When MPIO support is specified
-|HKLM\SYSTEM\CurrentControlSet\Control
-\Class\ {iSCSI_driver_GUID}\ instance_ID
-\Parameters \IPSecConfigTimeout
-|60
-|Always
-|HKLM\SYSTEM\CurrentControlSet\Control
-\Class\ {iSCSI_driver_GUID}\ instance_ID
-\Parameters \LinkDownTime
-|10
-|Always
-|HKLM\SYSTEM\CurrentControlSet\Services
-\ClusDisk \Parameters\ManageDisksOnSystemBuses
-|1
-|Always
-|HKLM\SYSTEM\CurrentControlSet\Control
-\Class\ {iSCSI_driver_GUID}\ instance_ID
-\Parameters \MaxRequestHoldTime
-|120
-|When no MPIO support is selected
-|HKLM\SYSTEM\CurrentControlSet\Control
-\Class\ {iSCSI_driver_GUID}\ instance_ID
-\Parameters \MaxRequestHoldTime
-|30
-|Always
-|HKLM\SYSTEM\CurrentControlSet\Control
-\MPDEV\MPIOSupportedDeviceList
-|"NETAPP LUN",
-"NETAPP LUN C-
-Mode",
-"NVMe NetApp ONTAO Con"
-|When MPIO support is specified
-|HKLM\SYSTEM\CurrentControlSet\Services\mpio
-\Parameters\PathRecoveryInterval
-|30
-|When your server is Windows Server 2012 R2,
-Windows Server 2016, Windows Server 2019, or Windows Server 2022
-|HKLM\SYSTEM\CurrentControlSet\Services\mpio
-\Parameters\PathVerifyEnabled
-|1
-|When MPIO support is specified
-|HKLM\SYSTEM\CurrentControlSet\Services
-\msdsm\Parameters\PathVerifyEnabled
-|1
-|When MPIO support is specified and your server is Windows Server 2012 R2,
-Windows Server 2016, Windows Server 2019, or Windows Server 2022
-|HKLM\SYSTEM\CurrentControlSet\Services
-\vnetapp\Parameters\PathVerifyEnabled
-|0
-|When MPIO support is specified
-|HKLM\SYSTEM\CurrentControlSet\Services
-\mpio\Parameters\PDORemovePeriod
-|130
-|When MPIO support is specified
-|HKLM\SYSTEM\CurrentControlSet\Services\msdsm
-\Parameters\PDORemovePeriod
-|130
-|When MPIO support is specified and your server is  Windows Server 2012 R2,
-Windows Server 2016 , Windows Server 2019, or Windows Server 2022
-|HKLM\SYSTEM\CurrentControlSet\Services\vnetapp
-\Parameters\PDORemovePeriod
-|130
-|When MPIO support is specified, except if Data ONTAP DSM is detected
-|HKLM\SYSTEM\CurrentControlSet\Services\mpio
-\Parameters\RetryCount
-|6
-|When MPIO support is specified
-|HKLM\SYSTEM\CurrentControlSet\Services\msdsm
-\Parameters\RetryCount
-|6
-|When MPIO support is specified and your server is Windows Server 2012 R2,
-Windows Server 2016, Windows Server 2019, or Windows Server 2022
-|HKLM\SYSTEM\CurrentControlSet\Services\mpio
-\Parameters\RetryInterval
-|1
-|When MPIO support is specified
-|HKLM\SYSTEM\CurrentControlSet\Services\msdsm
-\Parameters\RetryInterval
-|1
-|When MPIO support is specified and your server is  Windows Server 2012 R2,
-Windows Server 2016, Windows Server 2019, or Windows Server 2022
-|HKLM\SYSTEM\CurrentControlSet\Services\vnetapp
-\Parameters\RetryInterval
-|1
-|When MPIO support is specified
-|HKLM\SYSTEM\CurrentControlSet\Services
-\disk\TimeOutValue
-|120
-|When no MPIO support is selected
-|HKLM\SYSTEM\CurrentControlSet\Services\mpio
-\Parameters\UseCustomPathRecoveryInterval
-|1
-|When MPIO support is specified and your server is  Windows Server 2012 R2,
-Windows Server 2016, Windows Server 2019, or Windows Server 2022
-|===
-
-
-Refer to the Microsoft documents for the registry parameter details.
-
-== NVMe parameters
-
-The following NVMe Emulex driver parameters are updated when installing WUHU 7.2:
-
-* EnableNVMe = 1
-* NVMEMode = 0
-* LimTransferSize=1
- 
-== FC HBA values set by Windows Host Utilities
-
-On systems using FC, the host utilities installer sets the required timeout values for Emulex and QLogic FC HBAs.
-
-For Emulex FC HBAs, the installer sets the following parameters:
-
-[role="tabbed-block"]
-====
-.When MPIO is selected
---
-|===
-|Property type |Property value
-
-|LinkTimeOut
-|1
-|NodeTimeOut
-|10
-|===
---
-
-.When MPIO is not selected
---
-|===
-|Property type |Property value
-
-|LinkTimeOut
-|30
-|NodeTimeOut
-|120
-|===
---
-====
-
-For QLogic FC HBAs, the installer sets the following parameters:
-
-[role="tabbed-block"]
-====
-.When MPIO is selected
---
-|===
-|Property type |Property value
-
-|LinkDownTimeOut
-|1
-|PortDownRetryCount
-|10
-|===
---
-
-.When MPIO is not selected
---
-|===
-|Property type |Property value
-
-|LinkDownTimeOut
-|30
-|PortDownRetryCount
-|120
-|===
---
-====
-
-[NOTE]
-The names of the parameters might vary slightly depending on the program.
-For example, in the QLogic QConvergeConsole program, the parameter is displayed as `Link Down Timeout`.
-The host utilities `fcconfig.ini` file displays this parameter as either `LinkDownTimeOut` or `MpioLinkDownTimeOut`, depending on whether MPIO is specified. However, all of these names refer to the same HBA parameter.
-
-.Related information
-Refer to Emulex or QLogic site to know more about the timeout parameters.
 
