--- a/hu_aix_61_rn.adoc
+++ b/hu_aix_61_rn.adoc
@@ -34,7 +34,7 @@ The AIX Host Utilities 6.1 release contains the following new features and enhan
 |===
 
 == Known problems and limitations
-You should be aware of the following Known issues that might impact performance on your specific host.
+You should be aware of the following known problems and limitations that might impact performance on your specific host.
 
 [cols=3,options="header"]
 |===
