--- a/hu_aix_71.adoc
+++ b/hu_aix_71.adoc
@@ -17,8 +17,6 @@ summary: Describes how to use IBM AIX 7.1 with ONTAP
 [.lead]
 You can use the ONTAP SAN host configuration settings to configure IBM AIX 7.1 with ONTAP as the target.
 
-
-
 == Install the AIX Host Utilities
 
 You must install the AIX Host Utilities Kit while using AIX MPIO with NetApp ONTAP storage.
@@ -177,4 +175,4 @@ To configure AIX for SM-BC, refer to the Knowledge Base article link:https://kb.
 
 == Known issues
 
-There are no Known issues.
+There are no known issues.
