known issues lead sentence

--- a/hu_sles_12SP3.adoc
+++ b/hu_sles_12SP3.adoc
@@ -123,6 +123,8 @@ devices {
 
 == Known issues
 
+The SLES 15 SP3 with ONTAP release has the following known issues:
+
 [cols=4*,options="header"]
 |===
 | NetApp Bug ID
