--- a/hu_sles_12SP5.adoc
+++ b/hu_sles_12SP5.adoc
@@ -123,6 +123,8 @@ devices {
 
 == Known issues
 
+The SLES 12 SP5 with ONTAP release has the following known issues:
+
 [cols=4*,options="header"]
 |===
 | NetApp Bug ID
