--- a/hu_solaris_113.adoc
+++ b/hu_solaris_113.adoc
@@ -199,6 +199,8 @@ For additional information and recommended changes to default settings, refer to
 
 == Known issues
 
+The Solaris 11.3 with ONTAP release has the following known issues:
+
 [cols=4*, options="header"]
 |===
 | NetApp Bug ID
