--- a/hu_solaris_62_rn.adoc
+++ b/hu_solaris_62_rn.adoc
@@ -15,7 +15,7 @@ summary: Release Notes for Solaris Host Utilities 6.2
 :imagesdir: ./media/
 
 [.lead]
-The release notes describe new features and enhancements, issues fixed in the current release, Known issues, and important cautions related to configuring and managing your specific Solaris host with your ONTAP storage system..
+The release notes describe new features and enhancements, issues fixed in the current release, known problems and limitations, and important cautions related to configuring and managing your specific Solaris host with your ONTAP storage system..
 
 For specific information about the operating system versions and updates that the Host Utilities support, see the link:https://mysupport.netapp.com/matrix/imt.jsp?components=85803;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^].
 
