--- a/hu_vsphere_6.adoc
+++ b/hu_vsphere_6.adoc
@@ -251,6 +251,8 @@ Use the following command to verify the QFullSampleSize:
 
 == Known issues
 
+The VMware vSphere 6.5 and 6.7 with ONTAP release has the following known issues:
+
 [width="99%",cols="21%,20%,14%,27%",options="header"]
 |===
 |*OS version* |*NetApp Bug ID*  |*Title*  |*Description*
