--- a/hu_windows_2019.adoc
+++ b/hu_windows_2019.adoc
@@ -51,5 +51,5 @@ include::_include/windows/reuse_windows_asa_configuration.adoc[]
 == Recommended settings
 include::_include/windows/reuse_windows_recommended_settings.adoc[]
 
-== Known limitations
+== Known issues
 There are no known issues for Windows Server 2019.
