--- a/hu_citrix_7x.adoc
+++ b/hu_citrix_7x.adoc
@@ -183,4 +183,4 @@ NOTE: Citrix XenServer recommends use of Citrix VM tools for all Linux and Windo
 
 == Known issues
 
-There are no Known issues.
+There are no known issues.
