--- a/hu_sles_15.adoc
+++ b/hu_sles_15.adoc
@@ -124,6 +124,8 @@ devices {
 
 == Known issues
 
+The SLES 15 with ONTAP release has the following known issues:
+
 [cols=4*,options="header"]
 |===
 | NetApp Bug ID
