--- a/hu_sles_15SP1.adoc
+++ b/hu_sles_15SP1.adoc
@@ -124,6 +124,8 @@ devices {
 
 == Known issues
 
+The SLES 15 SP1 with ONTAP release has the following known issues:
+
 [cols=4,options="header" width="80%"]
 |===
 | NetApp Bug ID
