--- a/hu_sles_15SP2.adoc
+++ b/hu_sles_15SP2.adoc
@@ -108,6 +108,9 @@ devices {
 ----
 
 == Known issues
+
+The SLES 15 SP2 with ONTAP release has the following known issues:
+
 [cols="1,1,3,1"]
 [options="header"]
 |===
