--- a/hu_veritas_6x.adoc
+++ b/hu_veritas_6x.adoc
@@ -213,4 +213,4 @@ If you have a heterogenous multipath environment including Veritas Infoscale, Li
 
 == Known issues
 
-There are no Known issues.
+There are no known issues.
