--- a/hu_vsphere_8.adoc
+++ b/hu_vsphere_8.adoc
@@ -302,6 +302,8 @@ You can use the following command to verify the QFullSampleSize.
 
 == Known issues
 
+The VMware vSphere 8.x with ONTAP release has the following known issues:
+
 [cols="10,30,30",options="header"]
 |===
 |NetApp Bug ID	|Title	|Description
