--- a/hu_windows_2012r2.adoc
+++ b/hu_windows_2012r2.adoc
@@ -59,5 +59,5 @@ include::_include/windows/reuse_windows_reinstalling_GRUB.adoc[]
 == Recommended settings
 include::_include/windows/reuse_windows_recommended_settings.adoc[]
 
-== Known limitations
+== Known issues
 There are no known issues for Windows Server 2012 R2.
