--- a/hu_windows_2016.adoc
+++ b/hu_windows_2016.adoc
@@ -56,5 +56,5 @@ include::_include/windows/reuse_windows_asa_configuration.adoc[]
 include::_include/windows/reuse_windows_recommended_settings.adoc[]
 
 
-== Known limitations
+== Known issues
 There are no known issues for Windows Server 2016.
