--- a/hu_windows_2022.adoc
+++ b/hu_windows_2022.adoc
@@ -48,5 +48,5 @@ include::_include/windows/reuse_windows_asa_configuration.adoc[]
 == Recommended settings
 include::_include/windows/reuse_windows_recommended_settings.adoc[]
 
-== Known limitations
+== Known issues
 There are no known issues for Windows Server 2022.
