known issue lead sentence

--- a/hu_aix_72.adoc
+++ b/hu_aix_72.adoc
@@ -179,6 +179,8 @@ To configure AIX for SM-BC, refer to the Knowledge Base article link:https://kb.
 
 == Known issues
 
+The IBM AIX 7.2 and/or PowerVM (VIOS 3.1) with ONTAP release has the following known issues:
+
 [cols=4*,options="header"]
 |===
 | NetApp Bug ID
