--- a/hu_citrix_8x.adoc
+++ b/hu_citrix_8x.adoc
@@ -177,6 +177,8 @@ NOTE: Citrix Hypervisor recommends use of Citrix VM tools for all Linux and Wind
 
 == Known issues
 
+The Citrix Hypervisor with ONTAP release has the following known issues:
+
 [cols=4*,options="header"]
 |===
 | NetApp Bug ID
