--- a/hu_hpux_11iv3.adoc
+++ b/hu_hpux_11iv3.adoc
@@ -134,6 +134,8 @@ Following are some recommended parameter settings for HPUX 11i v3 and NetApp ONT
 
 == Known issues
 
+The HP-UX 11i v3 with ONTAP release has the following known issues:
+
 [cols=4*, options="header"]
 |===
 | NetApp Bug ID
