--- a/hu_ol_69.adoc
+++ b/hu_ol_69.adoc
@@ -112,6 +112,8 @@ NOTE: To configure Oracle Linux 6.9 RedHat Enterprise Kernel (RHCK), use the lin
 
 == Known issues
 
+The Oracle Linux 6.9 with ONTAP release has the following known issues:
+
 [cols=4*,options="header"]
 |===
 | NetApp Bug ID
