--- a/hu_ol_70.adoc
+++ b/hu_ol_70.adoc
@@ -121,6 +121,8 @@ NOTE: To configure Oracle Linux 7.0 RedHat Enterprise Kernel (RHCK), use the lin
 
 == Known issues
 
+The Oracle Linux 7.0 with ONTAP has the following known issues:
+
 [cols=4*,options="header"]
 |===
 | NetApp Bug ID
