--- a/hu_rhel_91.adoc
+++ b/hu_rhel_91.adoc
@@ -140,6 +140,8 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
+The RHEL 9.1 with ONTAP has the following known issues:
+
 [options="header", cols="20, 20, 50,20"]
 |===
 |NetApp Bug ID	|Title	|Description	|Bugzilla ID
