--- a/hu_rhel_92.adoc
+++ b/hu_rhel_92.adoc
@@ -125,7 +125,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-The NVMe-oF host configuration for RHEL 9.2 with ONTAP release has the following known issues:
+The RHEL 9.2 with ONTAP release has the following known issues:
 
 [options="header", cols="20, 20, 50,20"]
 |===
