--- a/hu_ol_77.adoc
+++ b/hu_ol_77.adoc
@@ -107,6 +107,8 @@ NOTE: To configure Oracle Linux 7.7 RedHat Enterprise Kernel (RHCK), use the lin
 
 == Known issues
 
+The Oracle Linux 7.7 with ONTAP has the following known issues:
+
 [cols=4*,options="header"]
 |===
 | NetApp Bug ID
