--- a/hu_rhel_65.adoc
+++ b/hu_rhel_65.adoc
@@ -126,6 +126,8 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
+The RHEL 6.5 with ONTAP has the following known issues:
+
 [cols=4*,options="header"]
 |===
 | NetApp Bug ID
