--- a/hu_rhel_71.adoc
+++ b/hu_rhel_71.adoc
@@ -125,6 +125,8 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
+The RHEL 7.1 with ONTAP has the following known issues:
+
 [cols=4*,options="header"]
 |===
 | NetApp Bug ID
