Apply suggestions from code review
Co-authored-by: Paula Carrigan <77334475+netapp-pcarriga@users.noreply.github.com>

--- a/hu_ol_65.adoc
+++ b/hu_ol_65.adoc
@@ -111,7 +111,7 @@ NOTE: To configure Oracle Linux 6.5 RedHat Enterprise Kernel (RHCK), use the lin
 
 == Known issues
 
-There are no known issues for Oracle 6.5.
+There are no known issues for the Oracle Linux 6.5 with ONTAP release.
 
 NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_65.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 6.5.
 
