--- a/hu_ol_71.adoc
+++ b/hu_ol_71.adoc
@@ -130,5 +130,5 @@ NOTE: To configure Oracle Linux 7.1 RedHat Enterprise Kernel (RHCK), use the lin
 
 == Known issues
 
-There are no known issues for Oracle Linux 7.1.
+There are no known issues for the Oracle Linux 7.1 with ONTAP release.
 
