--- a/hu_ol_72.adoc
+++ b/hu_ol_72.adoc
@@ -130,5 +130,5 @@ NOTE: To configure Oracle Linux 7.2 RedHat Enterprise Kernel (RHCK), use the lin
 
 == Known issues
 
-There are no known issues for Oracle Linux 7.2.
+There are no known issues for the Oracle Linux 7.2 with ONTAP release.
 
