--- a/hu_ol_73.adoc
+++ b/hu_ol_73.adoc
@@ -108,5 +108,5 @@ NOTE: To configure Oracle Linux 7.3 RedHat Enterprise Kernel (RHCK), use the lin
 
 == Known issues
 
-There are no known issues for Oracle Linux 7.3.
+There are no known issues for the Oracle Linux 7.3 with ONTAP release.
 
