--- a/hu_ol_81.adoc
+++ b/hu_ol_81.adoc
@@ -109,7 +109,7 @@ NOTE: To configure Oracle Linux 8.1 RedHat Enterprise Kernel (RHCK), use the lin
 
 == Known issues
 
-There are no known issues for Oracle Linux 8.1.
+There are no known issues for the Oracle Linux 8.1 with ONTAP release.
 
 NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_81.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 8.1.
 
