--- a/hu_ol_83.adoc
+++ b/hu_ol_83.adoc
@@ -128,6 +128,6 @@ NOTE: To configure Oracle Linux 8.3 Red Hat Enterprise Kernel (RHCK), use the li
 
 == Known issues
 
-There are no known issues for Oracle Linux 8.3.
+There are no known issues for the Oracle Linux 8.3 with ONTAP release.
 
 NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_83.html#known-problems-and-limitations[known issues] section in the corresponding Red Hat Enterprise Linux release documentation.
