--- a/hu_ol_67.adoc
+++ b/hu_ol_67.adoc
@@ -111,7 +111,7 @@ NOTE: To configure Oracle Linux 6.7 RedHat Enterprise Kernel (RHCK), use the lin
 
 == Known issues
 
-There are no known issues for Oracle 6.7.
+There are no known issues for the Oracle Linux 6.7 with ONTAP release.
 
 NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_67.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 6.7.
 
