--- a/hu_ol_75.adoc
+++ b/hu_ol_75.adoc
@@ -108,7 +108,7 @@ NOTE: To configure Oracle Linux 7.5 RedHat Enterprise Kernel (RHCK), use the lin
 
 == Known issues
 
-The Oracle Linux 7.5 with ONTAP has the following known issues:
+The Oracle Linux 7.5 with ONTAP release has the following known issues:
 
 [cols=4*,options="header"]
 |===
