--- a/hu_ol_78.adoc
+++ b/hu_ol_78.adoc
@@ -110,7 +110,7 @@ NOTE: To configure Oracle Linux 7.8 RedHat Enterprise Kernel (RHCK), use the lin
 
 == Known issues
 
-The Oracle Linux 7.8 with ONTAP has the following known issues:
+The Oracle Linux 7.8 with ONTAP release has the following known issues:
 
 [cols=4*,options="header"]
 |===
