--- a/hu_ol_84.adoc
+++ b/hu_ol_84.adoc
@@ -132,6 +132,6 @@ You can use the recommended settings to configure Kernel-based Virtual Machine (
 
 == Known issues
 
-There are no known issues for Oracle Linux 8.4.
+There are no known issues for the Oracle Linux 8.4 with ONTAP release.
 
 NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_84.html#known-problems-and-limitations[known issues] section in the corresponding Red Hat Enterprise Linux release documentation.
