--- a/hu_rhel_610.adoc
+++ b/hu_rhel_610.adoc
@@ -126,4 +126,4 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-There are no known issues for RHEL 6.10.
+There are no known issues for the RHEL 6.10 with ONTAP release.
