--- a/hu_rhel_66.adoc
+++ b/hu_rhel_66.adoc
@@ -126,7 +126,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-The RHEL 6.6 with ONTAP has the following known issues:
+The RHEL 6.6 with ONTAP release has the following known issues:
 
 [cols=4*,options="header"]
 |===
