--- a/hu_rhel_67.adoc
+++ b/hu_rhel_67.adoc
@@ -126,5 +126,5 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-There are no known issues for RHEL 6.7.
+There are no known issues for the RHEL 6.7 with ONTAP release.
 
