additional edits as per IE review

--- a/hu_rhel_70.adoc
+++ b/hu_rhel_70.adoc
@@ -125,7 +125,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-The RHEL 7.0 with ONTAP has the following known issues:
+The RHEL 7.0 with ONTAP release has the following known issues:
 
 [cols=4*,options="header"]
 |===
