--- a/hu_rhel_83.adoc
+++ b/hu_rhel_83.adoc
@@ -125,5 +125,5 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-There are no known issues for RHEL 8.3.
+There are no known issues for the RHEL 8.3 with ONTAP release.
 
