--- a/hu_sles_12SP2.adoc
+++ b/hu_sles_12SP2.adoc
@@ -123,4 +123,4 @@ devices {
 
 == Known issues
 
-There are no known issues for SUSE Linux Enterprise Server 12 SP2.
+There are no known issues for the SUSE Linux Enterprise Server 12 SP2 with ONTAP release.
