--- a/hu_sles_12SP4.adoc
+++ b/hu_sles_12SP4.adoc
@@ -123,5 +123,5 @@ devices {
 
 == Known issues
 
-There are no known issues for SUSE Linux Enterprise Server 12 SP4.
+There are no known issues for the SUSE Linux Enterprise Server 12 SP4 with ONTAP release.
 
