--- a/hu_sles_15SP5.adoc
+++ b/hu_sles_15SP5.adoc
@@ -125,6 +125,6 @@ devices {
 
 == Known issues
 
-There are no known issues.
+There are no known issues for the SUSE Linux Enterprise Server 15 SP5 with ONTAP release.
 
 
