--- a/hu_veritas_8x.adoc
+++ b/hu_veritas_8x.adoc
@@ -219,4 +219,4 @@ If you have a heterogenous multipath environment including Veritas Infoscale, Li
 
 == Known issues
 
-There are no known issues.
+There are no known issues for the Veritas Infoscale 8 for Linux with ONTAP release.
