--- a/hu_vsphere_7.adoc
+++ b/hu_vsphere_7.adoc
@@ -271,7 +271,7 @@ Use the following command to verify the QFullSampleSize
 
 == Known issues
 
-There are no known issues.
+There are no known issues for the VMware vSphere 7.x with ONTAP release.
 
 .Related information
 
