--- a/hu_windows_2012r2.adoc
+++ b/hu_windows_2012r2.adoc
@@ -60,4 +60,4 @@ include::_include/windows/reuse_windows_reinstalling_GRUB.adoc[]
 include::_include/windows/reuse_windows_recommended_settings.adoc[]
 
 == Known issues
-There are no known issues for Windows Server 2012 R2.
+There are no known issues for the Windows Server 2012 R2 with ONTAP release.
