--- a/hu_windows_2016.adoc
+++ b/hu_windows_2016.adoc
@@ -57,4 +57,4 @@ include::_include/windows/reuse_windows_recommended_settings.adoc[]
 
 
 == Known issues
-There are no known issues for Windows Server 2016.
+There are no known issues for the Windows Server 2016 with ONTAP release.
