--- a/hu_windows_2022.adoc
+++ b/hu_windows_2022.adoc
@@ -49,4 +49,4 @@ include::_include/windows/reuse_windows_asa_configuration.adoc[]
 include::_include/windows/reuse_windows_recommended_settings.adoc[]
 
 == Known issues
-There are no known issues for Windows Server 2022.
+There are no known issues for the Windows Server 2022 with ONTAP release.
