--- a/hu_rhel_72.adoc
+++ b/hu_rhel_72.adoc
@@ -125,5 +125,5 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-There are no known issues for RHEL 7.2.
+There are no known issues for the RHEL 7.2 with ONTAP release.
 
