--- a/hu_rhel_76.adoc
+++ b/hu_rhel_76.adoc
@@ -119,7 +119,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-The RHEL 7.6 with ONTAP has the following known issues:
+The RHEL 7.6 with ONTAP release has the following known issues:
 
 [cols=4*,options="header"]
 |===
