--- a/hu_rhel_80.adoc
+++ b/hu_rhel_80.adoc
@@ -124,7 +124,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-The RHEL 8.0 with ONTAP has the following known issues:
+The RHEL 8.0 with ONTAP release has the following known issues:
 
 [cols=4*,options="header"]
 |===
