--- a/hu_rhel_82.adoc
+++ b/hu_rhel_82.adoc
@@ -125,6 +125,6 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-There are no known issues for RHEL 8.2.
+There are no known issues for the RHEL 8.2 with ONTAP release.
 
 // BURT-1579262 22 Aug 2023
