--- a/hu_rhel_88.adoc
+++ b/hu_rhel_88.adoc
@@ -142,6 +142,6 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-There are no known issues for RHEL 8.8.
+There are no known issues for the RHEL 8.8 with ONTAP release.
 
 
