--- a/hu_rhel_90.adoc
+++ b/hu_rhel_90.adoc
@@ -125,5 +125,5 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-There are no known issues for RHEL 9.0.
+There are no known issues for the RHEL 9.0 with ONTAP release.
 
