--- a/hu_rhel_91.adoc
+++ b/hu_rhel_91.adoc
@@ -140,7 +140,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-The RHEL 9.1 with ONTAP has the following known issues:
+The RHEL 9.1 with ONTAP release has the following known issues:
 
 [options="header", cols="20, 20, 50,20"]
 |===
