--- a/hu_sles_12SP1.adoc
+++ b/hu_sles_12SP1.adoc
@@ -123,4 +123,4 @@ devices {
 
 == Known issues
 
-There are no known issues for SUSE Linux Enterprise Server 12 SP1.
+There are no known issues for the SUSE Linux Enterprise Server 12 SP1 with ONTAP release.
