--- a/hu_sles_15SP3.adoc
+++ b/hu_sles_15SP3.adoc
@@ -123,4 +123,4 @@ devices {
 
 == Known issues
 
-There are no known issues for SUSE Linux Enterprise Server 15 SP3.
+There are no known issues for the SUSE Linux Enterprise Server 15 SP3 with ONTAP release.
