--- a/hu_sles_15SP4.adoc
+++ b/hu_sles_15SP4.adoc
@@ -160,5 +160,5 @@ devices {
 
 == Known issues
 
-There are no known issues for SUSE Linux Enterprise Server 15 SP4.
+There are no known issues for the SUSE Linux Enterprise Server 15 SP4 with ONTAP release.
 
