--- a/hu_windows_2019.adoc
+++ b/hu_windows_2019.adoc
@@ -52,4 +52,4 @@ include::_include/windows/reuse_windows_asa_configuration.adoc[]
 include::_include/windows/reuse_windows_recommended_settings.adoc[]
 
 == Known issues
-There are no known issues for Windows Server 2019.
+There are no known issues for the Windows Server 2019 with ONTAP release.
