--- a/hu_centos_71.adoc
+++ b/hu_centos_71.adoc
@@ -125,5 +125,5 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-There are no known issues for CentOS 7.1.
+There are no known issues for the CentOS 7.1 with ONTAP release.
 
