--- a/hu_centos_74.adoc
+++ b/hu_centos_74.adoc
@@ -125,6 +125,8 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
+The CentOS 7.4 with ONTAP release has the following known issues:
+
 [cols=4*,options="header"]
 |===
 | NetApp Bug ID
