--- a/hu_centos_77.adoc
+++ b/hu_centos_77.adoc
@@ -127,6 +127,8 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
+The CentOS 7.7 with ONTAP release has the following known issues:
+
 [cols=4*,options="header"]
 |===
 | NetApp Bug ID
