--- a/hu_centos_84.adoc
+++ b/hu_centos_84.adoc
@@ -125,5 +125,5 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-There are no known issues for CentOS 8.4.
+There are no known issues for the CentOS 8.4 with ONTAP release.
 
