--- a/hu_centos_85.adoc
+++ b/hu_centos_85.adoc
@@ -126,5 +126,5 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-There are no know issues for CentOS 8.5.
+There are no know issues for the CentOS 8.5 with ONTAP release.
 
