--- a/hu_ol_87.adoc
+++ b/hu_ol_87.adoc
@@ -150,7 +150,7 @@ You can also use the recommended settings to configure the Kernel-based Virtual 
 
 == Known issues
 
-There are no known issues for Oracle Linux 8.7.
+There are no known issues for the Oracle Linux 8.7 with ONTAP release.
 
 
 
