--- a/hu_ol_88.adoc
+++ b/hu_ol_88.adoc
@@ -146,7 +146,7 @@ You can also use the recommended settings to configure a Kernel-based Virtual Ma
 
 == Known issues
 
-There are no known issues.
+There are no known issues for the Oracle Linux 8.8 with ONTAP release.
 
 
 
